Added info to html site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>JS Biglietto Treno</title>
 </head>
 <body>
-    
+    <h3>Costo biglietto del treno</h3>
+
+    <p id="ticket-cost-result">Il costo e di: </p>
 
     <script src="js/index.js"></script>
 </body>
